--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
 HippoSupermecado/.idea/modules.xml
+HippoSupermecado/.idea/modules.xml
+HippoSupermecado/.idea/modules.xml
+HippoSupermecado/.idea/modules.xml
