Lista de Produtos - WEbService Consulta

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ HippoSupermecado/.idea/modules.xml
 HippoSupermecado/.idea/modules.xml
 HippoSupermecado/.idea/modules.xml
 HippoSupermecado/.idea/modules.xml
+/WebServiceGrupo1/target/
