--- a/WebServiceGrupo1/pom.xml
+++ b/WebServiceGrupo1/pom.xml
@@ -21,6 +21,11 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>6.4.0.jre7</version>
+        </dependency>
     </dependencies>
 
     <build>
