--- a/HippoSupermecado/app/src/main/AndroidManifest.xml
+++ b/HippoSupermecado/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.hipposupermecado">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".QRCode">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
