--- a/HippoSupermecado/app/build.gradle
+++ b/HippoSupermecado/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     compile 'me.dm7.barcodescanner:zxing:1.9.8'
     implementation 'com.android.support:cardview-v7:26.1.0'
+    //image
+    implementation files('libs/universal-image-loader-1.9.5.jar')
 }
